--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
 
 <body>
     <main class="card">
-        <h2 class="advice-id">ADVICE #117</h2>
+        <h2 class="advice-id" id="conselho">ADVICE #117</h2>
         <p class="advice-description">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</p>
         <picture>
             <source srcset="./src/images/pattern-divider-mobile.svg" media="(max-width: 768px)">
             <img src="./src/images/pattern-divider-desktop.svg" alt="Pattern divider">
         </picture>
-        <button class="advice-update">
+        <button class="advice-update" id="btn">
             <img src="./src/images/icon-dice.svg" alt="Dice icon">
         </button>
     </main>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
